2012-05-02      Stephan Linz <linz@li-pro.net>

	* platform: harmonize kernel configuration for 13.2 designs

2012-04-29      Stephan Linz <linz@li-pro.net>

	* xlbsp: upgrade to lates exports from ISE 13.2

2012-04-25	Stephan Linz <linz@li-pro.net>

	* platform: upgrade to u-boot-2012.04.01

2012-04-22	Stephan Linz <linz@li-pro.net>

	* platform: upgrade to u-boot-2012.04

2012-04-15	Stephan Linz <linz@li-pro.net>

	* platform: upgarde to linux-3.3

2012-03-16	Stephan Linz <linz@li-pro.net>

	* platform: migrate to ptxdist-2012.03.0

2012-03-14	Stephan Linz <linz@li-pro.net>

	* xlbsp: upgrade to lates exports from ISE 13.2

2012-02-23	Stephan Linz <linz@li-pro.net>

	* common: initial version Xilinx-ML605-AXI-full-13.2
