@@ -22,7 +22,7 @@
 #
 # CAUTION:  This file is automatically generated by libgen.
 # Version:  Xilinx EDK 13.2 EDK_O.61xd
-# Today is: Saturday, the 28 of April, 2012; 10:27:23
+# Today is: Thursday, the 17 of May, 2012; 21:23:17
 #
 # Description: Linux 2.4 Configurations
 #
@@ -262,8 +262,8 @@ define_hex CONFIG_XILINX_INTC_0_BASEADDR 0x8aff0000
 define_hex CONFIG_XILINX_INTC_0_HIGHADDR 0x8affffff
 define_int CONFIG_XILINX_INTC_0_S_AXI_ADDR_WIDTH 32
 define_int CONFIG_XILINX_INTC_0_S_AXI_DATA_WIDTH 32
-define_int CONFIG_XILINX_INTC_0_NUM_INTR_INPUTS 7
-define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111111110000000
+define_int CONFIG_XILINX_INTC_0_NUM_INTR_INPUTS 8
+define_string CONFIG_XILINX_INTC_0_KIND_OF_INTR 0b11111111111111111111111100000000
 define_string CONFIG_XILINX_INTC_0_KIND_OF_EDGE 0b11111111111111111111111111111111
 define_string CONFIG_XILINX_INTC_0_KIND_OF_LVL 0b11111111111111111111111111111111
 define_int CONFIG_XILINX_INTC_0_HAS_IPR 1
@@ -276,12 +276,13 @@ define_string CONFIG_XILINX_INTC_0_S_AXI_PROTOCOL AXI4LITE
 define_string CONFIG_XILINX_INTC_0_HW_VER 1.01.a
 define_string CONFIG_XILINX_INTC_0_INSTANCE axi_intc_0
 # axi_iic_0_IIC2INTC_Irpt
-# axi_sysace_0_SysACE_IRQ
-# axi_ether_0_INTERRUPT
-# axi_timer_0_Interrupt
 # axi_uart_0_IP2INTC_Irpt
+# axi_ether_0_INTERRUPT
+# fpga_0_axi_sysace_0_SysACE_MPIRQ_pin
+# axi_sysace_0_SysACE_IRQ
 # axi_ether_0_dma_mm2s_introut
 # axi_ether_0_dma_s2mm_introut
+# axi_timer_0_Interrupt
 
 # Timer is axi_timer_0
 define_string CONFIG_XILINX_TIMER_0_S_AXI_PROTOCOL AXI4LITE
@@ -298,7 +299,7 @@ define_int CONFIG_XILINX_TIMER_0_S_AXI_ADDR_WIDTH 32
 define_int CONFIG_XILINX_TIMER_0_S_AXI_DATA_WIDTH 32
 define_string CONFIG_XILINX_TIMER_0_HW_VER 1.02.a
 define_string CONFIG_XILINX_TIMER_0_INSTANCE axi_timer_0
-define_int CONFIG_XILINX_TIMER_0_Interrupt 3
+define_int CONFIG_XILINX_TIMER_0_Interrupt 0
 
 # System memory is axi_v6_ddrx_0
 define_hex CONFIG_XILINX_ERAM_START 0x20000000
