@@ -29,7 +29,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Saturday, the 28 of April, 2012; 10:27:24
+ * Today is: Thursday, the 17 of May, 2012; 21:23:18
  *
  * XPS project directory: Xilinx-ML605-AXI-full-13.2
  */
@@ -50,7 +50,7 @@
 		reg = < 0x20000000 0x10000000 >;
 	} ;
 	chosen {
-		bootargs = "console=ttyS0,115200 root=/dev/mtdblock2 rw rootfstype=jffs2 mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
+		bootargs = "console=ttyS0,115200 ubi.mtd=2 root=ubi0:root rootfstype=ubifs rw mtdparts=ae000000.flash:16384k(bpi),4096k(kernel),11776k(rootfs),384k(u-boot-xl)ro,128k(env) debug";
 		linux,stdout-path = "/axi@0/serial@89ff0000";
 	} ;
 	cpus {
@@ -164,7 +164,7 @@
 		axi_dma_0: axi-dma@8adf0000 {
 			compatible = "xlnx,axi-dma-4.00.a", "xlnx,axi-dma-1.00.a";
 			interrupt-parent = <&axi_intc_0>;
-			interrupts = < 1 2 0 2 >;
+			interrupts = < 2 2 1 2 >;
 			reg = < 0x8adf0000 0x10000 >;
 			xlnx,dlytmr-resolution = <0x4e2>;
 			xlnx,family = "virtex6";
@@ -186,8 +186,8 @@
 			compatible = "xlnx,axi-ethernet-3.00.a", "xlnx,axi-ethernet-1.00.a";
 			device_type = "network";
 			interrupt-parent = <&axi_intc_0>;
-			interrupts = < 4 2 >;
-			local-mac-address = [ 00 0a 35 ec 3b 00 ];
+			interrupts = < 5 2 >;
+			local-mac-address = [ 00 0a 35 26 1e 00 ];
 			phy-handle = <&phy0>;
 			reg = < 0x88f00000 0x40000 >;
 			xlnx,avb = <0x0>;
@@ -306,7 +306,7 @@
 		axi_iic_0: i2c@80ef0000 {
 			compatible = "xlnx,axi-iic-1.01.a", "xlnx,xps-iic-2.00.a";
 			interrupt-parent = <&axi_intc_0>;
-			interrupts = < 6 2 >;
+			interrupts = < 7 2 >;
 			reg = < 0x80ef0000 0x10000 >;
 			xlnx,family = "virtex6";
 			xlnx,gpo-width = <0x1>;
@@ -322,13 +322,13 @@
 			interrupt-controller ;
 			reg = < 0x8aff0000 0x10000 >;
 			xlnx,kind-of-intr = <0x0>;
-			xlnx,num-intr-inputs = <0x7>;
+			xlnx,num-intr-inputs = <0x8>;
 		} ;
 		axi_sysace_0: sysace@83600000 {
 			8-bit ;
 			compatible = "xlnx,axi-sysace-1.01.a", "xlnx,xps-sysace-1.00.a";
 			interrupt-parent = <&axi_intc_0>;
-			interrupts = < 5 2 >;
+			interrupts = < 3 2 4 2 >;
 			reg = < 0x83600000 0x10000 >;
 			xlnx,family = "virtex6";
 			xlnx,mem-width = <0x8>;
@@ -337,7 +337,7 @@
 			clock-frequency = <50000000>;
 			compatible = "xlnx,axi-timer-1.02.a", "xlnx,xps-timer-1.00.a";
 			interrupt-parent = <&axi_intc_0>;
-			interrupts = < 3 2 >;
+			interrupts = < 0 2 >;
 			reg = < 0x8aef0000 0x10000 >;
 			xlnx,count-width = <0x20>;
 			xlnx,family = "virtex6";
@@ -353,7 +353,7 @@
 			current-speed = <9600>;
 			device_type = "serial";
 			interrupt-parent = <&axi_intc_0>;
-			interrupts = < 2 2 >;
+			interrupts = < 6 2 >;
 			reg = < 0x89ff0000 0x10000 >;
 			reg-offset = <0x1000>;
 			reg-shift = <2>;
