@@ -22,7 +22,7 @@
  *
  * CAUTION:  This file is automatically generated by libgen.
  * Version:  Xilinx EDK 13.2 EDK_O.61xd
- * Today is: Saturday, the 28 of April, 2012; 10:27:23
+ * Today is: Thursday, the 17 of May, 2012; 21:23:17
  *
  * Description: U-Boot Configurations
  *
@@ -43,21 +43,22 @@
 
 /* Interrupt controller is axi_intc_0 */
 #define XILINX_INTC_BASEADDR                     0x8aff0000
-#define XILINX_INTC_NUM_INTR_INPUTS              7
+#define XILINX_INTC_NUM_INTR_INPUTS              8
 /* axi_iic_0_IIC2INTC_Irpt */
-/* axi_sysace_0_SysACE_IRQ */
-/* axi_ether_0_INTERRUPT */
-/* axi_timer_0_Interrupt */
 /* axi_uart_0_IP2INTC_Irpt */
+/* axi_ether_0_INTERRUPT */
+/* fpga_0_axi_sysace_0_SysACE_MPIRQ_pin */
+/* axi_sysace_0_SysACE_IRQ */
 /* axi_ether_0_dma_mm2s_introut */
 /* axi_ether_0_dma_s2mm_introut */
+/* axi_timer_0_Interrupt */
 
 /* System (Timer) Clock Frequency */
 #define XILINX_CLOCK_FREQ                        50000000
 
 /* Timer is axi_timer_0 */
 #define XILINX_TIMER_BASEADDR                    0x8aef0000
-#define XILINX_TIMER_IRQ                         3
+#define XILINX_TIMER_IRQ                         0
 
 /* System memory is axi_v6_ddrx_0 */
 #define XILINX_RAM_START                         0x20000000
